force-app/main/default/objects/Quote__c/fields/Basic_Sale_Price_Modified__c.field-meta.xml
<CustomField>
    <fullName>Basic_Sale_Price_Modified__c</fullName>
    <label>Basic Sale Price (Modified)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>