force-app/main/default/objects/Quote__c/fields/Basic_Sale_Price_Modified_Bifurcation__c.field-meta.xml
<CustomField>
    <fullName>Basic_Sale_Price_Modified_Bifurcation__c</fullName>
    <label>Basic Sale Price Modified Bifurcation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>