force-app/main/default/objects/Quote__c/fields/Basic_Sale_Price_Original__c.field-meta.xml
<CustomField>
    <fullName>Basic_Sale_Price_Original__c</fullName>
    <label>Basic Sale Price (Original)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>