force-app/main/default/objects/Quote__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>