force-app/main/default/objects/Quote__c/fields/Discount_in_Rate_Per_Unit_Area__c.field-meta.xml
<CustomField>
    <fullName>Discount_in_Rate_Per_Unit_Area__c</fullName>
    <label>Discount in Rate Per Unit Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>