force-app/main/default/objects/Quote__c/fields/DLD_Fees_Modified_Bifurcation__c.field-meta.xml
<CustomField>
    <fullName>DLD_Fees_Modified_Bifurcation__c</fullName>
    <label>DLD Fees Modified Bifurcation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>