force-app/main/default/objects/Quote__c/fields/DLD_Fees_Original__c.field-meta.xml
<CustomField>
    <fullName>DLD_Fees_Original__c</fullName>
    <label>DLD Fees (Original)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>