force-app/main/default/objects/Quote__c/fields/Floor_Rise_Original__c.field-meta.xml
<CustomField>
    <fullName>Floor_Rise_Original__c</fullName>
    <label>Other Charge 1 (Original)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>