force-app/main/default/objects/Quote__c/fields/Income_Charge_1__c.field-meta.xml
<CustomField>
    <fullName>Income_Charge_1__c</fullName>
    <label>Income Charge 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>