force-app/main/default/objects/Quote__c/fields/Income_Charge_5_Amount__c.field-meta.xml
<CustomField>
    <fullName>Income_Charge_5_Amount__c</fullName>
    <label>Income Charge 5 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>