force-app/main/default/objects/Quote__c/fields/Multi_Properties__c.field-meta.xml
<CustomField>
    <fullName>Multi_Properties__c</fullName>
    <label>Multi Properties</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>