force-app/main/default/objects/Quote__c/fields/Multi_Properties_Id_s__c.field-meta.xml
<CustomField>
    <fullName>Multi_Properties_Id_s__c</fullName>
    <label>Multi Properties Id&apos;s</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>