force-app/main/default/objects/Quote__c/fields/Other_Charge_4_Modified__c.field-meta.xml
<CustomField>
    <fullName>Other_Charge_4_Modified__c</fullName>
    <label>Other Charge 4 (Modified)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>