force-app/main/default/objects/Quote__c/fields/Premium_1_Modified__c.field-meta.xml
<CustomField>
    <fullName>Premium_1_Modified__c</fullName>
    <label>Other Charge 2 (Modified)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>