force-app/main/default/objects/Quote__c/fields/Premium_2_Modified__c.field-meta.xml
<CustomField>
    <fullName>Premium_2_Modified__c</fullName>
    <label>Other Charge 3 (Modified)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>