force-app/main/default/objects/Quote__c/fields/Quote_for_Multi_Properties__c.field-meta.xml
<CustomField>
    <fullName>Quote_for_Multi_Properties__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote for Multi Properties</label>
    <type>Checkbox</type>
</CustomField>