force-app/main/default/objects/Quote__c/fields/Quote_is_approved__c.field-meta.xml
<CustomField>
    <fullName>Quote_is_approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote is approved</label>
    <type>Checkbox</type>
</CustomField>