force-app/main/default/objects/Quote__c/fields/Quote_Validity__c.field-meta.xml
<CustomField>
    <fullName>Quote_Validity__c</fullName>
    <label>Quote Validity</label>
    <type>Date</type>
</CustomField>