force-app/main/default/objects/Quote__c/fields/Total_Purchase_Price_Modified__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchase_Price_Modified__c</fullName>
    <formula>Basic_Sale_Price_Modified__c + Floor_Rise_Modified__c + Premium_1_Modified__c + Premium_2_Modified__c + Other_Charge_4_Modified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Purchase Price Modified</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>