force-app/main/default/objects/Quote__c/fields/Total_Purchase_Price_Original__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchase_Price_Original__c</fullName>
    <formula>Basic_Sale_Price_Original__c + Floor_Rise_Original__c + Premium_1_Original__c + Premium_2_Original__c + Other_Charge_4_Original__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Purchase Price Original</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>